--- a/src/budgeteer/Savings/SavingsTable/savingsTable.scss
+++ b/src/budgeteer/Savings/SavingsTable/savingsTable.scss
@@ -20,6 +20,6 @@
 }
 
 .networth-table {
-	padding-bottom: 15px;
+	padding: 15px 0;
 }
 
